# BrickStortion

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Assets/: README.txt
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: DistortionEngine.cpp  DistortionEngine.h
Source/Parameters/: PluginParameters.cpp  PluginParameters.h
Source/UI/: BrickSlider.cpp  BrickSlider.h  Theme.cpp  Theme.h
installer/: Brickstortion.iss
